# apps/backend/internal/adapters/postgres/sqlc/models.go
@@ -19,14 +19,6 @@ type Account struct {
 	ExpiresAt  pgtype.Timestamptz
 }
 
-type DraftTeam struct {
-	ID             pgtype.UUID
-	DraftID        pgtype.UUID
-	Name           string
-	NameNormalized string
-	Position       int32
-}
-
 type EmailVerificationToken struct {
 	ID            pgtype.UUID
 	AccountID     pgtype.UUID
@@ -74,15 +66,6 @@ type LeagueAdministrator struct {
 	LeagueID   pgtype.UUID
 	AccountID  pgtype.UUID
 	AssignedAt pgtype.Timestamptz
-}
-
-type LeagueDraft struct {
-	ID        pgtype.UUID
-	AccountID pgtype.UUID
-	Name      string
-	CreatedAt pgtype.Timestamptz
-	UpdatedAt pgtype.Timestamptz
-	ExpiresAt pgtype.Timestamptz
 }
 
 type LeagueFollower struct {
